    - set_is_proper_subset(\@A,\@B)   is set B a proper subset of set A
    - set_is_superset(\@A,\@B)        is set B a superet of set A
    - set_is_proper_superset(\@A,\@B) is set B a proper superet of set A
    - set_is_proper_intersection(\@A,\@B)   "" a proper intersection ""
    - contfrac(n,d)                   list of continued fraction for n/d
    - next_calkin_wilf(n,d)           next breadth-first CW rational
    - next_stern_brocot(n,d)          next breadth-first SB rational
    - calkin_wilf_n(n,d)              index of breadth-first CW rational
    - stern_brocot_n(n,d)             index of breadth-first SB rational
    - nth_calkin_wilf(n)              CW rational at breadth-first index n
    - nth_stern_brocot(n)             SB rational at breadth-first index n
    - nth_stern_diatomic(n)           Stern's Diatomic series; fusc(n)
    - farey(n)                        list of Farey sequence order n
    - farey(n,k)                      k'th entry of Farey sequence order n
    - next_farey(n,[p,q])             next order-n rational after p/q
    - farey_rank(n,[p,q])             number of F_n less than p/q


    [FIXES]

    - nth_ramanujan_* returns undef with input of 0.

    - PP code for is_polygonal with n=0 was wrong.  Fixed and refactored.

    - Some large results that used GMP are properly objectified.

    - When using GMP, native int results are no longer objectified.

    - AKS was modding a with r, since 2012.

    - is_totient(2^k) with k >= 33, found by Trizen in 2019.

    - forsquarefree and forfactored were missing a destroy.  From Trizen.

    - todigitstring with non-standard bases and long strings.  From Trizen.

    - Fix v0.62 breaking extended precision long doubles on some machines.
      Big difference in epsilon-level precision for LambertW, Li, Zeta.

    - sieve_range documentation for depth didn't exactly match the XS code.

    - is_extra_strong_lucas_pseudoprime(5) was returning 0.
