@@ -236,6 +236,7 @@ sub entropy_bytes {
 *rising_factorial = \&Math::Prime::Util::PP::rising_factorial;
 
 *contfrac = \&Math::Prime::Util::PP::contfrac;
+*from_contfrac = \&Math::Prime::Util::PP::from_contfrac;
 *next_calkin_wilf = \&Math::Prime::Util::PP::next_calkin_wilf;
 *next_stern_brocot = \&Math::Prime::Util::PP::next_stern_brocot;
 *calkin_wilf_n = \&Math::Prime::Util::PP::calkin_wilf_n;
