@@ -434,6 +434,7 @@ Tags:
 =head2 RATIONALS
 
   contfrac(n,d)                       list of continued fraction for n/d
+  from_contfrac(@A)                   return (p,q) rational from cfrac list
   next_calkin_wilf(n,d)               next breadth-first CW rational
   next_stern_brocot(n,d)              next breadth-first SB rational
   calkin_wilf_n(n,d)                  index of breadth-first CW rational
