@@ -196,6 +196,7 @@ Revision history for Perl module Math::Prime::Util
     - set_is_proper_superset(\@A,\@B) is set B a proper superet of set A
     - set_is_proper_intersection(\@A,\@B)   "" a proper intersection ""
     - contfrac(n,d)                   list of continued fraction for n/d
+    - from_contfrac(@A)               return (p,q) rational from cfrac list
     - next_calkin_wilf(n,d)           next breadth-first CW rational
     - next_stern_brocot(n,d)          next breadth-first SB rational
     - calkin_wilf_n(n,d)              index of breadth-first CW rational
